--- a/templates/users/user_home.html
+++ b/templates/users/user_home.html
@@ -15,8 +15,8 @@
     <p>{{ user.phone }}</p>
 
 <ul>
-    <h2><a href="{% url 'authentication:home' %}">Sign-out?</a></h2>
-    <h2><a href="{% url 'authentication:update_form' user.id %}">Update your profile?</a></h2>
+    <h2><a href="{% url 'users:home' %}">Sign-out?</a></h2>
+    <h2><a href="{% url 'users:update_form' user.id %}">Update your profile?</a></h2>
     <h2><a href="{% url 'tweets:tweet_form'  user.id%}">Post a tweet?</a></h2>
     <h2><a href="{% url 'tweets:show_all_users' user.id %}">Search other users?</a></h2>
 </ul>
