--- a/templates/users/user_home.html
+++ b/templates/users/user_home.html
@@ -42,7 +42,7 @@
 {% for follower in user.follower_set.all %}
 {% for tweet in tweets %}
     {% if tweet.user_id is follower.followee_id %}
-        <li>{{ tweet.text }} &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp <a href="{% url 'tweets:like' user.id tweet.id 'user_home'%}">Like</a>
+        <li>{{ tweet.text }} &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp <a href="{% url 'tweets:like' user.id tweet.user_id tweet.id 'user_home'%}">Like</a>
             &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp <a href="{% url 'tweets:comment_form' user.id tweet.user_id tweet.id 'user_home'%}">Comment</a>
             &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp <a href="{% url 'tweets:show_comments' user.id tweet.id %}">Show All Comments</a>
         </br>
