--- a/templates/tweets/profile.html
+++ b/templates/tweets/profile.html
@@ -18,6 +18,7 @@
 {% for tweet in user.tweet_set.all %}
     <ul>
         <li><strong>{{ tweet.text }}&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp <a href="{% url 'tweets:like' user_id user.id tweet.id 'profile'%}">Like</a>
+            &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp <a href="{% url 'tweets:show_likes' user.id tweet.id %}">Show All Likes</a>
         &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp <a href="{% url 'tweets:comment_form' user_id user.id tweet.id 'profile'%}">Comment</a>
         &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp <a href="{% url 'tweets:show_comments' user.id tweet.id %}">Show All Comments</a></strong></li>
     </ul>
