--- a/templates/users/user_home.html
+++ b/templates/users/user_home.html
@@ -29,6 +29,7 @@
         <li>{{ tweet.text }}
             &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp <a href="{% url 'tweets:comment_form' user.id user.id tweet.id 'user_home'%}">Comment</a>
             &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp <a href="{% url 'tweets:show_comments' user.id tweet.id %}">Show All Comments</a>
+            &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp <a href="{% url 'tweets:show_likes' user.id tweet.id %}">Show All Likes</a>
         </br>
         </li>
         </br>
@@ -43,6 +44,7 @@
 {% for tweet in tweets %}
     {% if tweet.user_id is follower.followee_id %}
         <li>{{ tweet.text }} &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp <a href="{% url 'tweets:like' user.id tweet.user_id tweet.id 'user_home'%}">Like</a>
+            &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp <a href="{% url 'tweets:show_likes' user.id tweet.id %}">Show All Likes</a>
             &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp <a href="{% url 'tweets:comment_form' user.id tweet.user_id tweet.id 'user_home'%}">Comment</a>
             &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp <a href="{% url 'tweets:show_comments' user.id tweet.id %}">Show All Comments</a>
         </br>
