--- a/templates/users/user_home.html
+++ b/templates/users/user_home.html
@@ -40,18 +40,16 @@
 <h2>Tweets by the users you followed:</h2>
 
 <ul>
-{% for follower in user.follower_set.all %}
-{% for tweet in tweets %}
-    {% if tweet.user_id is follower.followee_id %}
+{% for follower in user.following.all %}
+{% for tweet in follower.followee_user.tweet_set.all %}
         <li>{{ tweet.text }} &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp <a href="{% url 'tweets:like' user.id tweet.user_id tweet.id 'user_home'%}">Like</a>
             &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp <a href="{% url 'tweets:show_likes' user.id tweet.id %}">Show All Likes</a>
             &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp <a href="{% url 'tweets:comment_form' user.id tweet.user_id tweet.id 'user_home'%}">Comment</a>
             &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp <a href="{% url 'tweets:show_comments' user.id tweet.id %}">Show All Comments</a>
         </br>
-            <i><strong>posted by {{ follower.followee_name }}</strong></i>
+            <i><strong>posted by {{ follower.followee_user.username }}</strong></i>
         </li>
         </br>
-    {% endif%}
 {% endfor %}
 {% endfor %}
 </ul>
